--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,4 +3,4 @@ version: 0.1
 phases:
   build:
     commands:
-      - aws s3 sync --exact-timestamps --delete rc s3://hapitas-rc-static-hosting
+      - aws s3 sync --exact-timestamps --delete rc hapitas-static-contents
